# esp32-sandbox

./: Cargo.toml  README.md  flash-release.sh  flash.sh  memory.x  partitions.csv  setenv.sh
.cargo/: config
src/: main.rs  serial.rs  watchdog.rs
